// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BigramCircle test BigramCircle linePoint 0 snapshot 1`] = `
<div
  className="circle-circlePosition"
>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="firstDiv cancelRightBorder"
    >
      <img
        alt="growth"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
    <div
      className="secondDiv emphasizedThree"
    >
      <img
        alt="conception"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 1,
          }
        }
      />
    </div>
  </div>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="thirdDiv"
    >
      <img
        alt="maturation"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
    <div
      className="fourthDiv cancelTopBorder"
    >
      <img
        alt="seeding"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`BigramCircle test BigramCircle linePoint 1 snapshot 1`] = `
<div
  className="circle-circlePosition"
>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="firstDiv emphasizedZero"
    >
      <img
        alt="growth"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 1,
          }
        }
      />
    </div>
    <div
      className="secondDiv"
    >
      <img
        alt="conception"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
  </div>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="thirdDiv"
    >
      <img
        alt="maturation"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
    <div
      className="fourthDiv"
    >
      <img
        alt="seeding"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`BigramCircle test BigramCircle linePoint 2 snapshot 1`] = `
<div
  className="circle-circlePosition"
>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="firstDiv cancelBottomBorder"
    >
      <img
        alt="growth"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
    <div
      className="secondDiv"
    >
      <img
        alt="conception"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
  </div>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="thirdDiv emphasizedTwo"
    >
      <img
        alt="maturation"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 1,
          }
        }
      />
    </div>
    <div
      className="fourthDiv cancelLeftBorder"
    >
      <img
        alt="seeding"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`BigramCircle test BigramCircle linePoint 3 snapshot 1`] = `
<div
  className="circle-circlePosition brownBorder"
>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="firstDiv brownBorder"
    >
      <img
        alt="growth"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
    <div
      className="secondDiv brownBorder"
    >
      <img
        alt="conception"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
  </div>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="thirdDiv brownBorder"
    >
      <img
        alt="maturation"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
    <div
      className="fourthDiv emphasizedOne brownBorder"
    >
      <img
        alt="seeding"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 1,
          }
        }
      />
    </div>
  </div>
</div>
`;
